# djw-battleground

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  test_firestone.js  test_firestone_complex.js
darf-workspace/: config.json  execution-log.md
darf-workspace/phase-1-research/: blind-brief.md  claude-output.md
data/: cards_cache_meta.json
docs/: PLAN.md
scripts/: download_card_images.py
src/battleground/: __init__.py  board.py  combat.py  minion.py  simulator.py  types.py
src/battleground/bridge/: __init__.py  bridge.js  firestone.py
src/battleground/game/: __init__.py  actions.py  battle_api.py  game_loop.py  matchmaking.py  minion_pool.py  player.py  random_player.py  recruit.py  shop.py  state.py
src/battleground/ui/: __init__.py  app.py
src/battleground/ui/components/: board_editor.py  card_picker.py  lobby_view.py  results.py  simulation_viewer.py
tests/: test_battle_api.py  test_bridge.py  test_combat.py  test_game_loop.py  test_integration_battle_api.py  test_minion_pool.py  test_random_player.py  test_recruit.py  test_shop.py  test_state.py
